# platrium

./: .gitignore  CNAME  LICENSE  nx.json
.agents/skills/write-docs/: SKILL.md
.github/workflows/: deploy-docs.yml
api/rest/: package-lock.json  package.json  project.json  tspconfig.yaml
api/rest/_generated/: openapi.yaml
api/rest/src/: errors.tsp  file.tsp  files.tsp  fsops_file.tsp  main.tsp
cli/: .gitignore  Cargo.toml
cli/src/: main.rs
core/: .gitignore  go.mod  go.sum  project.json
core/cmd/engine/: main.go
core/cmd/seed/: main.go
core/cmd/server/: main.go
core/ent/schema/: blob.go  item.go  relationship.go
core/internal/api/: attachedfs.go  objects.go
core/internal/artifacts/: base.go  (+3 more)
docs/: README.md  next.config.ts  package-lock.json  package.json  project.json  source.config.ts  tsconfig.json
docs/.source/: browser.ts  server.ts
docs/app/: globals.css  layout.tsx  robots.ts  sitemap.ts
docs/components/: api-page.tsx  mdx.tsx  platrium_logo.jsx  search.tsx  tabs.tsx
docs/lib/: layout.shared.tsx  openapi.ts  source.ts
sdk/: Cargo.toml  project.json
sdk/_ffi/android/: .gitignore  build.gradle.kts  settings.gradle.kts
sdk/_generated/: Cargo.toml
sdk/_generated/src/apis/: configuration.rs  files_api.rs  mod.rs
sdk/_generated/src/models/: errors_engine_internal.rs  errors_missing_chunks.rs  files_chunk_commit_info.rs  files_chunk_upload_info.rs  files_create_file_request.rs  files_create_file_response.rs  files_upload_session_chunks_request.rs  files_upload_session_chunks_response.rs  files_upload_session_commit_chunk.rs  files_upload_session_commit_request.rs  files_upload_session_commit_response.rs  files_upload_session_init_request.rs  files_upload_session_init_response.rs  files_upload_session_presigned_chunk.rs  mod.rs
sdk/src/: errors.rs  lib.rs
sdk/src/client/: files.rs  mod.rs
sdk/src/fs/: chunks.rs
sdk/src/net/: manager.rs  mod.rs  transfers.rs
sdk/src/xplat/: file.rs  logging.rs
sdk/uniffi/: Cargo.toml  uniffi.toml
(+105 files in other folders)
