[package]
name = "platrium-sdk"
version = "0.1.0"
edition = "2024"

[lib]
# Required for Android, iOS and WebAssembly cross-compilation
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
platrium-restapi = { path = "./_generated" }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["File", "Blob", "ReadableStream", "Response"] }