[package]
name = "platrium-sdk"
version = "0.1.0"
edition = "2024"

[lib]
# Required for Android, iOS and WebAssembly cross-compilation
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
log = "0.4"
platrium-restapi = { path = "./_generated" }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
uniffi = { version = "0.32.0", features = ["tokio"] }
tokio-util = "0.7.18"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["File", "Blob", "ReadableStream", "Response"] }
tokio = { version = "1.0", features = ["sync", "macros"] }

# Android Only dependencies
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"


# Native Dependencies (Linux, MacOS, Windows, etc.)
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android"), not(target_os = "ios")))'.dependencies]
env_logger = "0.11.11"
